--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop": "gatsby develop --port 8002",
+    "start": "gatsby develop --port 8002",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "copy-dsfr-to-public",
+    "prestart": "only-include-used-icons",
+    "prebuild": "only-include-used-icons"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!@codegouvfr/react-dsfr)"
+    ]
   },
   "dependencies": {
+    "@codegouvfr/react-dsfr": "^0.78.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "gatsby": "^5.12.4",
@@ -25,9 +34,11 @@
     "gatsby-plugin-sharp": "^5.12.2",
     "gatsby-plugin-sitemap": "^6.12.2",
     "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-source-graphql": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
