--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby": "^5.12.4",
     "gatsby-plugin-emotion": "^8.12.0",
     "gatsby-plugin-image": "^3.12.2",
+    "gatsby-plugin-layout": "^4.12.0",
     "gatsby-plugin-manifest": "^5.12.2",
     "gatsby-plugin-sharp": "^5.12.2",
     "gatsby-plugin-sitemap": "^6.12.2",
@@ -41,7 +42,8 @@
     "gatsby-transformer-sharp": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
