--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@graphql-eslint/eslint-plugin": "^3.20.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "prettier": "^3.0.3",
     "typescript": "^5.1.6"
   }
 }
