--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,9 +28,11 @@ jobs:
       - name: Install Node.js dependencies
         run: npm ci
 
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
-          tsc: true
+      - name: Run eslint
+        run: npm run lint
+
+      - name: Run prettier
+        run: ./node_modules/.bin/prettier --check .
+
+      - name: Run tsc
+        run: npm run typecheck
