--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "develop": "gatsby develop --port 8002",
     "start": "gatsby develop --port 8002",
-    "build": "gatsby build",
+    "build": "gatsby build && copy-dsfr-to-public",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
