feat: fetch object image from EROS
fix: handle error when creating localErosImage field

feat: try fetching second eros image when one fails

feat(eros): use real sized image instead of vignette

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 ELASTICSEARCH_CONNECTION_URL=http://user:p4ssw0rd@localhost:9200
+EROS_API_TOKEN=
+EROS_ENABLED=false
 GATSBY_EUPHROSYNE_HOST=
 GATSBY_GEONAMES_USERNAME=
 GATSBY_SENTRY_DSN=https://387b15a5897e55c39dbdd622edd91769@sentry.incubateur.net/179
