feat: add filters & connect to opensearch

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SITE_URL=
 EUPHROSYNE_GRAPHQL_ENDPOINT=
-OPENSEARCH_HOST=http://localhost:9200
+OPENSEARCH_CONNECTION_URL=http://user:p4ssw0rd@localhost:9200
+GEONAMES_USERNAME=
