--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     ]
   },
   "dependencies": {
-    "@codegouvfr/react-dsfr": "^1.0.0",
+    "@codegouvfr/react-dsfr": "^1.9.16",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@opensearch-project/opensearch": "^2.8.0",
     "gatsby": "^5.12.4",
     "gatsby-plugin-emotion": "^8.12.0",
     "gatsby-plugin-image": "^3.12.2",
@@ -46,7 +47,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@graphql-eslint/eslint-plugin": "^3.20.1",
