refactor: rearrange environment variables for testing, staging & prod

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 SITE_URL=
-EUPHROSYNE_GRAPHQL_ENDPOINT=
-OPENSEARCH_CONNECTION_URL=http://user:p4ssw0rd@localhost:9200
+EUPHROSYNE_HOST=
+ELASTICSEARCH_CONNECTION_URL=http://user:p4ssw0rd@localhost:9200
 GEONAMES_USERNAME=
