--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,9 +36,9 @@ jobs:
         run: npm run build
         env:
           SITE_URL: http://localhost:8000
-          EUPHROSYNE_GRAPHQL_ENDPOINT: https://euphrosyne.incubateur.net/graphql
+          EUPHROSYNE_HOST: https://euphrosyne.incubateur.net
           TYPEGEN_ON_BUILD: true
-          OPENSEARCH_CONNECTION_URL: http://localhost:9200 # TODO change to the real opensearch host
+          ELASTICSEARCH_CONNECTION_URL: ${{ secrets.ELASTICSEARCH_CONNECTION_URL }}
 
       - name: Run eslint
         run: npm run lint
