--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "scripts": {
     "develop": "gatsby develop --port 8002 --verbose",
     "start": "gatsby develop --port 8002",
-    "build": "gatsby build && copy-dsfr-to-public",
+    "prebuild": "only-include-used-icons && npm run build-plugins",
+    "build": "gatsby build",
+    "postbuild": "copy-dsfr-to-public",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
     "postinstall": "copy-dsfr-to-public",
     "prestart": "only-include-used-icons",
-    "prebuild": "only-include-used-icons",
     "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "build-plugins": "cd plugins/opensearch-source-plugin && npm run build"
   },
   "jest": {
     "transformIgnorePatterns": [
@@ -44,6 +46,7 @@
     "gatsby-source-graphql": "^5.12.0",
     "gatsby-transformer-remark": "^6.12.3",
     "gatsby-transformer-sharp": "^5.12.2",
+    "opensearch-source-plugin": "file:./plugins/opensearch-source-plugin",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.3",
