fix: rename env variables to use it on client

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SITE_URL=
-EUPHROSYNE_HOST=
 ELASTICSEARCH_CONNECTION_URL=http://user:p4ssw0rd@localhost:9200
-GEONAMES_USERNAME=
+GATSBY_EUPHROSYNE_HOST=
+GATSBY_GEONAMES_USERNAME=
+SITE_URL=
