feat: add sentry

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,7 @@
     "./gatsby-node.ts",
     "./gatsby-config.ts",
     "./plugins/**/*",
-    "./types/**/*"
+    "./types/**/*",
+    "sentry.config.ts"
   ]
 }
