--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@opensearch-project/opensearch": "^2.8.0",
+    "@sentry/gatsby": "^8.30.0",
     "gatsby": "^5.12.4",
     "gatsby-plugin-emotion": "^8.13.1",
     "gatsby-plugin-image": "^3.13.1",
