--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ELASTICSEARCH_CONNECTION_URL=http://user:p4ssw0rd@localhost:9200
 GATSBY_EUPHROSYNE_HOST=
 GATSBY_GEONAMES_USERNAME=
-SENTRY_DSN=https://387b15a5897e55c39dbdd622edd91769@sentry.incubateur.net/179
+GATSBY_SENTRY_DSN=https://387b15a5897e55c39dbdd622edd91769@sentry.incubateur.net/179
 SITE_URL=
