--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,9 +104,8 @@
   "include": [
     "./src/**/*",
     "./gatsby-node.ts",
-    "./gatsby-config.ts",
+    "sentry.config.ts",
     "./plugins/**/*",
-    "./types/**/*",
-    "sentry.config.ts"
+    "./types/**/*"
   ]
 }
