--- a/nginx.conf
+++ b/nginx.conf
@@ -2,4 +2,6 @@ root /app/public;
 
 location / {
   try_files $uri $uri/ /404/index.html =404;
+  auth_basic           "Protected Site";
+   auth_basic_user_file "/app/htpasswd";
 }
