--- a/package.json
+++ b/package.json
@@ -5,25 +5,18 @@
   "description": "euphrosyne-digilab",
   "author": "witold",
   "keywords": [
-    "gatsby"
+    "nextjs"
   ],
   "engines": {
     "node": "20.*"
   },
   "scripts": {
-    "develop": "gatsby develop --port 8002 --verbose",
-    "start": "gatsby develop --port 8002",
-    "prebuild": "only-include-used-icons && npm run build-plugins",
-    "build": "gatsby build",
-    "postbuild": "copy-dsfr-to-public",
-    "serve": "gatsby serve --port 8002",
-    "clean": "gatsby clean",
+    "dev": "next dev -p 8002",
+    "build": "next build",
+    "start": "next start -p 8002",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "postinstall": "copy-dsfr-to-public",
-    "prestart": "only-include-used-icons",
-    "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "npm run lint -- --fix",
-    "build-plugins": "cd plugins/opensearch-source-plugin && npm run build"
+    "postinstall": "copy-dsfr-to-public"
   },
   "jest": {
     "transformIgnorePatterns": [
@@ -35,19 +28,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@opensearch-project/opensearch": "^2.8.0",
-    "@sentry/gatsby": "^8.54.0",
-    "gatsby": "^5.12.4",
-    "gatsby-plugin-emotion": "^8.13.1",
-    "gatsby-plugin-image": "^3.13.1",
-    "gatsby-plugin-layout": "^4.13.1",
-    "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-sharp": "^5.13.1",
-    "gatsby-plugin-sitemap": "^6.13.1",
-    "gatsby-source-filesystem": "^5.13.1",
-    "gatsby-source-graphql": "^5.13.1",
-    "gatsby-transformer-remark": "^6.13.1",
-    "gatsby-transformer-sharp": "^5.13.1",
-    "opensearch-source-plugin": "file:./plugins/opensearch-source-plugin",
+    "@sentry/nextjs": "^8.54.0",
+    "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.3",
@@ -55,13 +37,14 @@
     "url": "^0.11.4"
   },
   "devDependencies": {
-    "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.14.11",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.0",
     "prettier": "^3.0.3",
     "typescript": "^5.1.6"
   }
