feat: remove nginx and do the basic auth in next

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_PUBLIC_EUPHROSYNE_HOST=
 NEXT_PUBLIC_GEONAMES_USERNAME=
 NEXT_PUBLIC_SENTRY_DSN=https://387b15a5897e55c39dbdd622edd91769@sentry.incubateur.net/179
 SITE_URL=
+BASIC_AUTH_CREDENTIALS=
