--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "predev": "react-dsfr update-icons",
-    "prebuild": "react-dsfr update-icons"
+    "prebuild": "react-dsfr update-icons",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "@codegouvfr/react-dsfr": "^1.22.3",
@@ -31,6 +33,7 @@
     "eslint": "^9.25.1",
     "eslint-config-next": "15.2.4",
     "eslint-plugin-import": "^2.31.0",
+    "prettier": "^3.5.3",
     "sas": "^3.0.4",
     "sass": "^1.86.3",
     "typescript": "^5"
