--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@emotion/styled": "^11.14.0",
     "@opensearch-project/opensearch": "^3.5.1",
     "@sentry/nextjs": "^10.27.0",
-    "next": "^16.1.1",
-    "react": "^19.0.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-use-measure": "^2.1.7",
     "slugify": "^1.6.6",
@@ -29,10 +29,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9.25.1",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.1.6",
     "eslint-plugin-import": "^2.31.0",
     "prettier": "^3.8.0",
     "sas": "^3.0.4",
