refactor: streamline ESLint configuration and update project dependencies

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "react-dsfr update-icons && next dev",
     "build": "react-dsfr update-icons && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "predev": "react-dsfr update-icons",
     "prebuild": "react-dsfr update-icons",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
