chore: update prettier check command to use npm script

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
         run: npm run lint
 
       - name: Run prettier check
-        run: npx prettier --check .
+        run: npm run format:check
 
       - name: Run tsc
         run: npm run typecheck
